Projeto II - Quase acabado, falta colocar mais coisa nos services
