# Projeto_2_API_Biblioteca/src/model/dto/UsuarioRequestsDto.ts
@@ -2,10 +2,11 @@
 export class UsuarioRequestsDto {
     id: number;
     idPessoa: number;
+    senha: string;
 
-
-    constructor(id?: number, idPessoa?: number) {
+    constructor(id?: number, idPessoa?: number, senha?: string) {
         this.id = id || 0;
         this.idPessoa = idPessoa || 0;
+        this.senha = senha || '';
     }
 }
