# Projeto_2_API_Biblioteca/src/model/entity/UsuarioEntity.ts
@@ -11,7 +11,10 @@ export class UsuarioEntity {
     }
     private validatesInformation(idPessoa: any, senha: any) {
         let error = '';
-        if (typeof idPessoa !== 'number' || typeof senha !== 'string') {
+        if (typeof idPessoa !== 'number') {
+            error += ("Informações incompletas ou incorretas. ");
+        }
+        if (typeof senha !== 'string') {
             error += ("Informações incompletas ou incorretas. ");
         }
 
